<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_sign_up"/>



    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:padding="12dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_name"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_email"
        />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorText"
        android:padding="12dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_password"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_confirm_password"
        android:layout_marginStart="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorText"
        android:padding="12dp"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_sign_up"/>



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorDarkGray"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_login"/>



</LinearLayout>